edit navbar brand to div

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,10 +6,10 @@
 				aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 	</button>
-  <a class="navbar-brand" href="#">
-    <img src="assets/t3_logo_light2.png" width="200" height="34" class="d-inline-block align-top" alt="Gosoft Logo">
+  <div class="navbar-brand">
+    <a [routerLink]="['/']"><img src="assets/t3_logo_light2.png" width="200" height="34" class="d-inline-block align-top" alt="Gosoft Logo"></a>
     <small id="projectName" class="project-name"><strong>Front-end Web Application Framework</strong></small>
-  </a>
+  </div>
   <div class="navbar-collapse collapse float-md-right"
 				id="navbarSupportedContent">
       <ul class="nav navbar-nav">
