change cdn path

--- a/src/app/doc/font.document.css
+++ b/src/app/doc/font.document.css
@@ -1,7 +1,7 @@
 
-@import url('http://10.182.247.73/go-cdn-dev/fonts/1.0.0/Kanit/font.css');
-@import url('http://10.182.247.73/go-cdn-dev/fonts/1.0.0/Athiti/font.css');
-@import url('http://10.182.247.73/go-cdn-dev/fonts/1.0.0/Maitree/font.css');
-@import url('http://10.182.247.73/go-cdn-dev/fonts/1.0.0/Taviraj/font.css');
-@import url('http://10.182.247.73/go-cdn-dev/fonts/1.0.0/Trirong/font.css');
+@import url('http://10.182.247.73/fonts/1.0.0/Kanit/font.css');
+@import url('http://10.182.247.73/fonts/1.0.0/Athiti/font.css');
+@import url('http://10.182.247.73/fonts/1.0.0/Maitree/font.css');
+@import url('http://10.182.247.73/fonts/1.0.0/Taviraj/font.css');
+@import url('http://10.182.247.73/fonts/1.0.0/Trirong/font.css');
 
