--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,16 +8,15 @@
 	</button>
   <div class="navbar-brand">
     <a [routerLink]="['/']"><img src="assets/t3_logo_light2.png" width="200" height="34" class="d-inline-block align-top" alt="Gosoft Logo"></a>
-    <small id="projectName" class="project-name"><strong>Front-end Web Application Framework</strong></small>
   </div>
   <div class="navbar-collapse collapse float-md-right"
 				id="navbarSupportedContent">
       <ul class="nav navbar-nav">
-        <li class="nav-item active" routerLinkActive="active">
+        <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" [routerLink]="['/']">Home</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" [routerLink]="['/gettingstart']">Getting Start</a>
+          <a class="nav-link" [routerLink]="['/documentation']">Documentation</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" [routerLink]="['/font']">Font</a>
